# nightingale

./: Cargo.toml  README.md
examples/: mission.rs  serial_mission.rs  tcp_mission.rs  udp_mission.rs  version.rs
src/: command.rs  component.rs  connection.rs  error.rs  lib.rs  link.rs  message.rs  mission.rs  wire.rs
src/core/: error.rs  link.rs  mod.rs  wire.rs
