[package]
name = "nightingale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-broadcast = "0.6.0"
crc16 = "0.4.0"
flume = "0.11.0"
futures = "0.3.29"
mavlink = { version = "0.12.0", features = ["ardupilotmega"]}
pin-project = "1.1.3"
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
tokio-serial = "5.4.4"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "net", "time"] }
